--- a/Input List/style.css
+++ b/Input List/style.css
@@ -1,38 +1,42 @@
+
+h1{
+    margin-top: 8%;
+    font-size: 400%;
+    color:rgb(19, 19, 101);
+}
+
 .main_input{
 display: flex;
 margin-left: 35%;
-margin-top: 10%;
+margin-top: 2%;
 }
 #m_input{
-    width: 40%;
+    width: 45%;
     height: 30px;
     border-radius: 25px;
     border: 2px solid rgb(19, 19, 101);
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    -ms-border-radius: 25px;
-    -o-border-radius: 25px;
     padding-left: 2%;
 }
 #add_btn{
     margin-left: 1%;
-    width: 5%;
+    width: 4%;
     height: 35px;
     border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
     border: 2px solid rgb(19, 19, 101);
     font-size: 100%;
     color: white;
     background-color:rgb(19, 19, 101);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
 #add_btn:hover{
     cursor: pointer ;
 }
 h2{
     margin-left: 35%;
+    color: #00308F;
 }
 #task{
     margin-left: 35%;
@@ -53,9 +57,16 @@ h2{
     border: 2px solid rgb(19, 19, 101);
     background-color: rgb(19, 19, 101);
     padding-left: 2%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
+
 .t_input{
     border: none;
+    outline: none;
+    border-style: none;
     margin: 3%;
     width: 75%;
     color: white;
